triangles added, box shadow, and background gradient. Attempts to fix spacing between sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ ONE CLASS DOES ONE THING
 	background-color: rgb(157, 229, 255);
 }
 .bg-blue-lightest {
-	background-color: rgb(206, 242, 255);
+	background-color: rgb(236, 250, 255);
 }
 .bg-brown-0 {
 	background-color: rgb(191, 154, 105);
@@ -75,7 +75,7 @@ ONE CLASS DOES ONE THING
 	background-color: rgb(210, 184, 150);
 }
 .bg-brown-lightest{
-	background-color: rgb(242, 234, 225);
+	background-color: rgb(255, 248, 241);
 }
 .bg-gold-0{
 	background-color: rgb(224, 213, 0);
@@ -84,7 +84,7 @@ ONE CLASS DOES ONE THING
 	background-color: rgb(236, 229, 102);
 }
 .bg-gold-lightest{
-	background-color: rgb(248, 246, 204);
+	background-color: rgb(255, 254, 241);
 }
 .bg-grey0 {
 	background-color: rgb(155, 161, 161);
@@ -102,7 +102,7 @@ ONE CLASS DOES ONE THING
 	background-color: rgb(241, 203, 229);
 }
 .bg-pink-lightest{
-	background-color: rgb(248, 229, 242);
+	background-color: rgb(255, 246, 252);
 }
 .border-none {
 	border: none;
@@ -119,7 +119,9 @@ ONE CLASS DOES ONE THING
 .display-table-row{
 	display: table-row;
 }
-
+.float-left{
+	float: left;
+}
 .max-width-26em{
 	max-width: 26em;
 }
@@ -145,6 +147,38 @@ ONE CLASS DOES ONE THING
 .width-90pc{
 	width: 90%;
 }
+section::after {
+	content: "";
+	margin-bottom: 1em;
+}
+/*=========================================================================
+Decorative elements
+===========================================================================*/
+.gradient{
+	background: #fffcfc; /* Old browsers */
+	background: -moz-linear-gradient(top, #fffcfc 0%, #fcffe0 21%, #ffe5f9 43%, #d6f4ff 69%, #fff7e0 99%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top, #fffcfc 0%,#fcffe0 21%,#ffe5f9 43%,#d6f4ff 69%,#fff7e0 99%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom, #fffcfc 0%,#fcffe0 21%,#ffe5f9 43%,#d6f4ff 69%,#fff7e0 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fffcfc', endColorstr='#fff7e0',GradientType=0 ); /* IE6-9 */
+}
+.triangle-topleft {
+	width: 0%;
+	height: 0%;
+	position: relative;
+	float: left;
+	border-top: 1.5em solid rgba(150, 150, 150, 0.2);
+	border-right: 1.5em solid transparent;
+}
+.triangle-bottomright {
+	width: 0%;
+	height: 0%;
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	float: right;
+	border-bottom: 1.5em solid rgba(0, 0, 0, 0.4);
+	border-left: 1.5em solid transparent;
+}
 
 /*=========================================================================
 Responsive portions
@@ -155,8 +189,13 @@ Responsive portions
 	width: 25%;
 }
 .homepage-project-container {
+	position: relative;
 	width: 100%;
-	padding: 0em 0em 1em 0em;
+}
+.homepage-project-container::after{
+	content: "";
+	display: table;
+	clear: both;
 }
 .homepage-highlight-project-container {
 	width: 100%;
@@ -165,76 +204,19 @@ Responsive portions
 .homepage-highlight-project-icon {
 	height: auto;
 	margin: auto;
-	width: 50%;
+	width: 20%;
 }
 .homepage-project-icon {
 	height: auto;
+	width: 100%;
 	margin: auto;
-	width: 50%;
+	min-width: 3em;
+}
+.homepage-project-icon-container{
+	float: left;
+	width: 10%;
 }
 
 .project-container-doublewidth{
 	width: 100%;
-	padding: 0em 0em 1em 0em;
-}
-
-@media only screen and (min-width: 620px) {
-	.homepage-project-icon {
-		height: auto;
-		margin: auto;
-		width: 50%;
-	}
-	.homepage-project-container {
-		height: 18em;
-		width: 50%;
-		padding: 0em 0em .5em 0em;
-	}
-	.homepage-highlight-project-icon-container {
-		height: auto;
-		margin: auto;
-		width: 67%;
-	}
-	.project-container-doublewidth{
-		height: 18em;
-		width: 100%;
-		padding: 0em 0em 1em 0em;
-	}
-}
-@media only screen and (min-width: 764px) {
-	.homepage-highlight-project-icon-container {
-		margin: auto;
-		width: 50%;
-		height: auto;
-	}
-	.homepage-highlight-project-container {
-		width: 50%;
-		padding: 0em 0em 1em 0em;
-	}
-	.homepage-highlight-project-icon-container {
-		height: auto;
-		margin: auto;
-		width: 80%;
-	}
-	.homepage-project-container {
-		height: 20em;
-		width: 33.3%;
-		padding: 0em 0em .5em 0em;
-	}
-	.homepage-project-icon {
-		height: auto;
-		margin: auto;
-		width: 60%;
-	}
-	.homepage-section-header {
-		clear: both;
-		float: left;
-		height: 20em;
-		width: 33.3%;
-		text-align: center;
-	}
-	.project-container-doublewidth{
-		height: 20em;
-		width: 66.7%;
-		padding: 0em 0em 1em 0em;
-	}
 }
